# aws-data-processing

./: .gitignore  README.md  project.json  pyproject.toml
data/: Data.xlsx  Descriptions.xlsx
functions/partition/: index.py
functions/partition/module/: partition.py  utils.py
functions/preprocess/: function.json  index.py
functions/preprocess/module/: preprocess.py  utils.py
functions/process/: function.json  index.py
functions/process/module/: process.py  utils.py
infrastructure/: main.tf  outputs.tf  providers.tf  variables.tf
