[tool.poetry]
name = "aws-data-processing"
version = "0.1.0"
description = ""
authors = ["Max Voitko <max.voitko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.9"
pandas = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
